--- a/css/style.css
+++ b/css/style.css
@@ -963,6 +963,7 @@ body {
 .info-footer__text {
   font-size: 2.4rem;
   line-height: 100%;
+  margin-bottom: 1.2rem;
 }
 
 .info-footer__mail-link {
